--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint && lint-staged",
-      "pre-push": "yarn test --watchAll=false"
+      "pre-push": "yarn test --watchAll=false --passWithNoTests"
     }
   },
   "lint-staged": {
