--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ yarn-error.log*
 # do not use `npm`, use `yarn` instead and commit `yarn.lock`
 package-lock.json
 /.vs/VSWorkspaceState.json
+.vs/slnx.sqlite
+.vs/stonkschat/v16/.suo
